--- a/pyproject.toml
+++ b/pyproject.toml
@@ -13,7 +13,8 @@ readme = "README.md"
 requires-python = ">=3.10"
 dependencies = [
   "paramiko>=3.3",
-  "requests>=2.31"
+  "requests>=2.31",
+  "python-dotenv>=1.0"
 ]
 classifiers = [
   "Programming Language :: Python :: 3",
