feat(deployment): enhance planning capabilities in deployment agent
- Added configuration options for planning: enable_planning, require_plan_approval, and planning_timeout.
- Implemented a structured deployment plan with steps, risks, and notes.
- Integrated user approval for deployment plans and added logging for plan execution.
- Enhanced SSH command execution with idle and total timeout handling.
- Updated default configuration to support new planning features.

--- a/config/default_config.json
+++ b/config/default_config.json
@@ -7,7 +7,10 @@
     "temperature": 0.0
   },
   "agent": {
-    "max_iterations": 40
+    "max_iterations": 40,
+    "enable_planning": true,
+    "require_plan_approval": false,
+    "planning_timeout": 60
   },
   "deployment": {
     "workspace_root": ".auto-deployer/workspace",
