--- a/config/default_config.json
+++ b/config/default_config.json
@@ -7,7 +7,8 @@
     "temperature": 0.0
   },
   "agent": {
-    "max_iterations": 40,
+    "max_iterations": 180,
+    "max_iterations_per_step": 30,
     "enable_planning": true,
     "require_plan_approval": false,
     "planning_timeout": 60
