--- a/config/default_config.json
+++ b/config/default_config.json
@@ -1,10 +1,52 @@
 {
   "llm": {
-    "provider": "gemini",
-    "model": "gemini-2.5-flash",
+    "provider": "deepseek",
+    "model": "deepseek-chat",
     "api_key": null,
     "endpoint": null,
-    "temperature": 0.0
+    "temperature": 0.0,
+    "proxy": null
+  },
+  "_llm_providers": {
+    "_comment": "Supported providers and their recommended models",
+    "gemini": {
+      "models": ["gemini-2.0-flash-exp", "gemini-1.5-pro", "gemini-1.5-flash"],
+      "env_key": "AUTO_DEPLOYER_GEMINI_API_KEY",
+      "endpoint": "auto (uses Google AI API)"
+    },
+    "openai": {
+      "models": ["gpt-4o", "gpt-4o-mini", "gpt-4-turbo", "gpt-3.5-turbo"],
+      "env_key": "AUTO_DEPLOYER_OPENAI_API_KEY",
+      "endpoint": "https://api.openai.com/v1"
+    },
+    "anthropic": {
+      "models": ["claude-3-5-sonnet-20241022", "claude-3-opus-20240229", "claude-3-haiku-20240307"],
+      "env_key": "AUTO_DEPLOYER_ANTHROPIC_API_KEY",
+      "endpoint": "https://api.anthropic.com/v1"
+    },
+    "deepseek": {
+      "models": ["deepseek-chat", "deepseek-coder"],
+      "env_key": "AUTO_DEPLOYER_DEEPSEEK_API_KEY",
+      "endpoint": "https://api.deepseek.com/v1"
+    },
+    "openrouter": {
+      "models": ["anthropic/claude-3.5-sonnet", "openai/gpt-4o", "google/gemini-2.0-flash-exp"],
+      "env_key": "AUTO_DEPLOYER_OPENROUTER_API_KEY",
+      "endpoint": "https://openrouter.ai/api/v1",
+      "note": "OpenRouter provides access to multiple models"
+    },
+    "openai-compatible": {
+      "models": ["depends on your endpoint"],
+      "env_key": "AUTO_DEPLOYER_LLM_API_KEY (optional)",
+      "endpoint": "required - set to your custom endpoint",
+      "examples": [
+        "Ollama: http://localhost:11434/v1",
+        "LM Studio: http://localhost:1234/v1",
+        "vLLM: http://your-server:8000/v1",
+        "Together AI: https://api.together.xyz/v1",
+        "Groq: https://api.groq.com/openai/v1"
+      ]
+    }
   },
   "agent": {
     "max_iterations": 180,
