feat(deployment): enhance command execution and output extraction
- Updated local command execution to include idle timeout handling for better responsiveness during long-running commands.
- Enhanced output extraction logic to classify command types and apply different extraction strategies based on command nature (noise, info, operation).
- Improved documentation for deployment strategies, emphasizing the importance of environment isolation and local dependencies.
- Removed outdated prompt templates to streamline the codebase.

--- a/config/default_config.json
+++ b/config/default_config.json
@@ -3,7 +3,7 @@
     "provider": "deepseek",
     "model": "deepseek-chat",
     "api_key": null,
-    "endpoint": null,
+    "endpoint": "https://api.deepseek.com/v1",
     "temperature": 0.0,
     "proxy": null
   },
