feat(config): update LLM provider defaults and enhance command output extraction
- Set default values for LLM model and endpoint in the configuration, allowing automatic population based on provider.
- Introduced structured output handling in the step executor to improve data consistency across deployment steps.
- Enhanced command output extraction to support directory listing commands, improving the ability to handle various command types.
- Updated prompt templates to clarify command execution rules and improve user guidance during deployment processes.

--- a/config/default_config.json
+++ b/config/default_config.json
@@ -1,12 +1,13 @@
 {
   "llm": {
     "provider": "deepseek",
-    "model": "deepseek-chat",
+    "model": null,
     "api_key": null,
-    "endpoint": "https://api.deepseek.com/v1",
+    "endpoint": null,
     "temperature": 0.0,
     "proxy": null
   },
+  "_comment": "model 和 endpoint 留空时会根据 provider 自动填充默认值。如需自定义，可手动设置这些字段。",
   "_llm_providers": {
     "_comment": "Supported providers and their recommended models",
     "gemini": {
