--- a/config/default_config.json
+++ b/config/default_config.json
@@ -63,7 +63,15 @@
     "require_plan_approval": false,
     "planning_timeout": 60,
     "compression_threshold": 0.5,
-    "compression_keep_ratio": 0.3
+    "compression_keep_ratio": 0.3,
+    "loop_detection": {
+      "enabled": true,
+      "direct_repeat_threshold": 3,
+      "error_loop_threshold": 4,
+      "command_similarity_threshold": 0.85,
+      "output_similarity_threshold": 0.8,
+      "temperature_boost_levels": [0.3, 0.5, 0.7]
+    }
   },
   "deployment": {
     "workspace_root": ".auto-deployer/workspace",
