--- a/pyproject.toml
+++ b/pyproject.toml
@@ -14,7 +14,8 @@ requires-python = ">=3.10"
 dependencies = [
   "paramiko>=3.3",
   "requests>=2.31",
-  "python-dotenv>=1.0"
+  "python-dotenv>=1.0",
+  "psutil>=5.9.0"
 ]
 classifiers = [
   "Programming Language :: Python :: 3",
