feat: Add comprehensive GitHub Actions workflow and configuration scripts for deployment testing

--- a/.gitignore
+++ b/.gitignore
@@ -50,6 +50,9 @@ agent_logs/
 .auto-deployer/
 *.log
 
+# GitHub Actions generated config
+config/github_actions_config.json
+
 # OS
 .DS_Store
 Thumbs.db
